--- a/src/pages/products/Module.scss
+++ b/src/pages/products/Module.scss
@@ -14,6 +14,7 @@
       border-radius: 10px;
       margin-bottom: 5em;
       text-decoration: none;
+      transition: box-shadow 0.3s, transform 0.3s; /* Agrega una transición suave */
 
       .image-product {
         width: 100%;
@@ -38,4 +39,9 @@
       }
     }
   }
+}
+
+.card-product:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  transform: translateY(-5px);
 }
