feat(admin): refactor data products and add state isvisible.

--- a/src/pages/products/Module.scss
+++ b/src/pages/products/Module.scss
@@ -14,7 +14,7 @@
       border-radius: 10px;
       margin-bottom: 5em;
       text-decoration: none;
-      transition: box-shadow 0.3s, transform 0.3s; /* Agrega una transición suave */
+      transition: box-shadow 0.3s, transform 0.3s; 
 
       .image-product {
         width: 100%;
