--- a/src/pages/admin/Module.scss
+++ b/src/pages/admin/Module.scss
@@ -2,7 +2,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: 2em;
+
+  .button-new-product{
+    border: none;
+    padding: 10px;
+    background-color: lightgreen;
+    border-radius: 10px;
+    cursor: pointer;  
+    margin: 1em;
+  }
+
   .table-products {
     border-collapse: collapse;
     width: 100%;
@@ -36,3 +47,48 @@
     background-color: #b92929;
   }
 }
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin: 0 auto;
+
+  .container-input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+
+    label {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    input {
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+    }
+  }
+
+  .button-form-user {
+    text-align: center;
+
+    button {
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      padding: 10px 15px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease-in-out;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+}
+
